<resources>
    <string name="app_name">HostMe</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
    <string name="welcome_to_hostme">Welcome to HostMe!</string>
    <string name="register">Register</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_user_main_page">User_Main_Page</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="number">Number</string>
    <string name="address">Address</string>
    <string name="title_activity_google_sign_in">GoogleSignIn</string>
    <string name="places_api">AIzaSyD02zfklTnI-fiX5VTG6MnAHRpk27Evp4I</string>
    <string name="server_client_id">549868407518-hgcmahjeqhp3la7q8c9is0dv30j60hrb.apps.googleusercontent.com</string>
    <string name="search">search</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">You signed out</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="Add_New">Add New</string>
    <string name="yes">Yes</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="no">No</string>
    <!--<string name="title_activity_test_display_user_info">activity_test_display_user_info</string>-->
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save Contact</string>
    <string name="title_activity_my_account_info">my_account_info</string>
    <string name="security_answer">Security Answer</string>
    <string name="confirm_password">confirm password</string>
    <string name="title_activity_reservation_record">ReservationRecord</string>
    <string name="error_message_email">Enter Valid Email</string>
</resources>
