<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.melonderr.hostme.Registration"
    tools:showIn="@layout/activity_registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="71dp"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="88dp" />

            <EditText
                android:id="@+id/LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/FirstName"
                android:layout_marginTop="38dp"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="88dp" />

            <EditText
                android:id="@+id/PhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/email_address"
                android:layout_marginTop="43dp"
                android:ems="10"
                android:hint="@string/number"
                android:inputType="phone"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="88dp" />

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/LastName"
                android:layout_marginTop="33dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="88dp" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Password"
                android:layout_marginTop="47dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="88dp" />

            <EditText
                android:id="@+id/ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ConfirmPassword"
                android:layout_marginTop="47dp"
                android:ems="10"
                android:hint="confirm password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="88dp" />


            <EditText
                android:id="@+id/Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/PhoneNumber"
                android:layout_marginTop="47dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="88dp" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="17dp"
                android:text="@string/submit"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="362dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
